# framework.system.journal

./: CMakeLists.txt  journal.pc.in
packaging/: journal.spec
src/include/journal/: appcore.h  device.h  display.h  journal.h  message.h  multimedia.h  pim.h  system.h  telephony.h  wifi.h
src/libjournal/: journal.c
