CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(journal)
SET(MAIN journal)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(EXEC_PREFIX "\${prefix}")
SET(LIBDIR "\${prefix}/lib")
SET(INCLUDEDIR "\${prefix}/include")
SET(VERSION_MAJOR 0)
SET(VERSION ${VERSION_MAJOR}.1.0)

file(GLOB_RECURSE SRCS
src/libjournal/journal.c
)

IF("${CMAKE_BUILD_TYPE}" STREQUAL "")
	SET(CMAKE_BUILD_TYPE "Release")
ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL "")
MESSAGE("Build type: ${CMAKE_BUILD_TYPE}")

INCLUDE(FindPkgConfig)
pkg_check_modules(PKGS REQUIRED
)

FOREACH(flag ${PKGS_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -Wall -fdata-sections -ffunction-sections -Wl,--gc-sections")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2")
SET(CMAKE_C_FLAGS_RELEASE "-O2")

include_directories(src/include
src/libjournal
)

FIND_PROGRAM(UNAME NAMES uname)
EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")
IF("${ARCH}" STREQUAL "arm")
	ADD_DEFINITIONS("-DTARGET")
	MESSAGE("add -DTARGET")
ENDIF("${ARCH}" STREQUAL "arm")

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")

SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--as-needed")

ADD_LIBRARY(${MAIN} SHARED ${SRCS})
target_link_libraries(${MAIN} ${PKGS_LIBRARIES} -lgcc_eh)
SET_TARGET_PROPERTIES(${MAIN} PROPERTIES SOVERSION ${VERSION_MAJOR})
SET_TARGET_PROPERTIES(${MAIN} PROPERTIES VERSION ${VERSION})

INSTALL(TARGETS ${MAIN} DESTINATION lib)

file(GLOB_RECURSE HEADERS
src/include/journal/*.h*
)

INSTALL(FILES ${HEADERS} DESTINATION include/journal )
CONFIGURE_FILE(journal.pc.in journal.pc)
INSTALL(FILES ${CMAKE_BINARY_DIR}/journal.pc DESTINATION lib/pkgconfig)

# install desktop file & icon
SET(PREFIX ${CMAKE_INSTALL_PREFIX})
